# radioimmune

./: .gitignore  README.md  fig4_fitting.ipynb  poc_parameter_estimation.md  pyproject.toml
.gjc/_session-019f61d7-57a3-7000-9450-a6245cb07fad/runtime/: runtime-state.json
.gjc/_session-019f61d7-57a3-7000-9450-a6245cb07fad/token-logs/: token-log.jsonl
.gjc/_session-019f62a1-a8e9-7000-ba91-d872aee97f7e/runtime/: runtime-state.json
.gjc/_session-019f66a2-9715-7000-bd48-80cdc100236f/runtime/: runtime-state.json
artifacts/: poc_fit_summary.csv
artifacts/dose_coverage_grid/: parameter_recovery.csv  posterior_widths.csv  scenario_ranking.csv  scenario_summary.csv
artifacts/observability_study/: parameter_recovery.csv  posterior_widths.csv  scenario_ranking.csv  scenario_summary.csv
artifacts/start_volume_grid/: parameter_recovery.csv  posterior_widths.csv  scenario_ranking.csv  scenario_summary.csv
artifacts/synthetic_study/: fit_predictions.csv  parameter_recovery.csv  posterior_summary.csv  profile_likelihood.csv  sensitivity.csv  study_summary.csv
notebooks/: bayesian_posterior_tutorial.ipynb  figure4_synthetic_fitting_tutorial.ipynb  figure4_three_arm_de_ls_fitting_tutorial.ipynb  figure5_timing_study_tutorial.ipynb  paperfig04_matlab_to_python_tutorial.ipynb
old_src/: model.py
radiology_modeling/: __init__.py  fit.py  observability_study.py  poc.py  synthetic_study.py
ref/code/: AsperudPlot.m  JakePatient1.m  PaperFig01.m  PaperFig04.m
src/: test.py
src/radioim/: __init__.py  data.py  diagnostics.py  model.py  optimize.py
(+3 files in other folders)
